--- a/LabAccounting/LabAccounting.csproj
+++ b/LabAccounting/LabAccounting.csproj
@@ -168,7 +168,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CustomSerializer.cs" />
+    <Compile Include="Models\InputTemplateModel.cs" />
+    <Compile Include="Models\SampleAddModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DataProxy.cs" />
     <Compile Include="Service\SystemTools.cs" />
     <Compile Include="Service\TimeHelper.cs" />
   </ItemGroup>
@@ -193,6 +197,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\litepicker.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -208,10 +213,11 @@
     <Content Include="Views\Journal\Index.cshtml" />
     <Content Include="Views\Journal\_SampleList.cshtml" />
     <Content Include="Views\Auth\Index.cshtml" />
+    <Content Include="Views\Journal\_AddModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Scripts\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
