--- a/LabAccEntity/LabAccEntity.csproj
+++ b/LabAccEntity/LabAccEntity.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Mappings\Meta\AggregateStateMap.cs" />
     <Compile Include="Mappings\Meta\ReagentCategoryMap.cs" />
     <Compile Include="Mappings\Meta\ReagentClassMap.cs" />
+    <Compile Include="Mappings\Meta\ContractTemplateMap.cs" />
     <Compile Include="Mappings\Meta\TemplateMap.cs" />
     <Compile Include="Mappings\Meta\UnitMap.cs" />
     <Compile Include="Models\Data\Sample.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Models\Meta\MetaBase.cs" />
     <Compile Include="Models\Meta\ReagentCategory.cs" />
     <Compile Include="Models\Meta\ReagentClass.cs" />
+    <Compile Include="Models\Meta\ContractTemplate.cs" />
     <Compile Include="Models\Meta\Template.cs" />
     <Compile Include="Models\Meta\Unit.cs" />
     <Compile Include="NHibernateHelper.cs" />
