--- a/LabAccounting/LabAccounting.csproj
+++ b/LabAccounting/LabAccounting.csproj
@@ -200,6 +200,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\litepicker.js" />
     <Content Include="Scripts\Models\AutofillMenu.js" />
+    <Content Include="Scripts\Models\MainPage.js" />
     <Content Include="Scripts\Models\TemplateModel.js" />
     <Content Include="Scripts\Models\Validator.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
