Финальные изменения перед первым предпоказом
- Добавлено удаление проб;
- Наведен сравнительный порядок в кодовой базе;
- Багфиксы фронта;

--- a/LabAccounting/Web.config
+++ b/LabAccounting/Web.config
@@ -10,13 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="ServiceAddr" value="127.0.0.1" />
-    <add key="ServiceBase" value="labacc" />
-    <add key="ServiceUser" value="postgres" />
-    <add key="ServicePass" value="qq" />
-
     <add key="AuthSiteID" value="2" />
-    <add key="AuthDatabaseConnectionString" value="Server=127.0.0.1;Port=5432;User Id=postgres;Password=qq;Database=labacc;CommandTimeout=350;" />
+    <add key="AuthDatabaseConnectionString" value="Server=127.0.0.1;Port=5432;User Id=postgres;Password=qq;Database=labacc;" />
+	<add key="MainDatabaseConnectionString" value="Server=127.0.0.1;Port=5432;User Id=postgres;Password=qq;Database=labacc;"/>
 
     <add key="DaysPerPage" value="5" />
   </appSettings>
