--- a/LabAccounting/LabAccounting.csproj
+++ b/LabAccounting/LabAccounting.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Models\SampleAddModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\DataProxy.cs" />
+    <Compile Include="Service\SessionManager.cs" />
     <Compile Include="Service\SystemTools.cs" />
     <Compile Include="Service\TimeHelper.cs" />
   </ItemGroup>
@@ -182,7 +183,6 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\mainpage.css" />
-    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -217,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
